# soliloquy

./: README.md  pyproject.toml
.github/workflows/: build_and_publish.yaml
soliloquy/: __init__.py  cli.py  eval_ops.py  poetry_ops.py  pyproject_ops.py  recursive_build.py  remote_ops.py  test_ops.py  version_ops.py
soliloquy/ops/: analyze_ops.py  build_ops.py  format_ops.py  git_ops.py  install_ops.py  lint_ops.py  lock_ops.py  poetry_utils.py  publish_ops.py  remote_ops.py  test_ops.py  version_ops.py
soliloquy/phases/: install.py  prepare.py  release.py  validate.py
tests/: test_eval.py  test_poetry.py  test_pyproject.py  test_remote.py  test_versions.py
