[tool.poetry]
name = "soliloquy"
version = "0.1.1.dev9"
description = "A CLI for managing a monorepo."
authors = ["Jacob Stewart <jacob@swarmauri.com>"]
license = "Apache2"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "*"
tomlkit = "*"
packaging = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
soliloquy = "soliloquy.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"