[tool.poetry]
name = "soliloquy"
version = "0.1.2"
description = "A CLI for managing a monorepo."
authors = ["Jacob Stewart <jacob@swarmauri.com>"]
license = "Apache2"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "*"
tomlkit = "*"
packaging = "*"
ruff = "*"

pytest = "^8.0.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "0.24.0"
#pytest-timeout = "^2.3.1"
#pytest-json-report = "^1.5.0"
#python-dotenv = "^1.0.0"
#jsonschema = "^4.18.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.1.1"
pytest-mock ="*"
requests = "*"

[tool.poetry.scripts]
soliloquy = "soliloquy.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"